<resources>
    <string name="app_name">登岳集</string>
    <string name="climb_together">Mt. Collector</string>
    <string name="home">主頁</string>
    <string name="mountain">百岳</string>
    <string name="equipment">裝備</string>
    <string name="discuss">討論</string>
    <string name="personal_chat">聊天</string>
    <string name="test_btn">Test</string>
    <string name="member">會員</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">分享</string>
    <string name="bit_enemy">手下敗將</string>
    <string name="loading">讀取中</string>
    <string name="week_weather">一週天氣</string>
    <string name="confirm">確定</string>
    <string name="news">最新消息</string>
    <string name="mt_list">百岳列表</string>
    <string name="mountain_notice">A 級：一般健行路線，活動天數約需 1-3 天。\nB 級：中級縱走路線，活動天數約需 4-5 天或活動天數約需 1-3 天但有危險地形。\nC 級：高級縱走路線，活動天數約需 5 天以上。\nC+級：高級縱走路線，有垂降及攀岩地形。\n雪季期間分成 2 級\nD 級：雪地健行及縱走，雪季管制期間有條件開放之路線。\nE 級：雪季管制期間暫停開放之路線。</string>
    <string name="level_all">全部</string>
    <string name="level_a">A級</string>
    <string name="level_b">B級</string>
    <string name="level_c">C級</string>
    <string name="level_d">D級</string>
    <string name="level_e">E級</string>
    <string name="equipment_list">裝備列表</string>
    <string name="select_equipment">請選擇你要攜帶的裝備</string>
    <string name="create"><u>新增第一筆裝備清單</u></string>
    <string name="equipment_select">選擇裝備</string>
    <string name="done">完成</string>
    <string name="equipment_select_list">裝備清單</string>
    <string name="please_select_login_type">請選擇以下任意一種登入方式</string>
    <string name="google_login">使用Google登入</string>
    <string name="post_count">貼文\n</string>
    <string name="mountain_count">登頂\n</string>
    <string name="friend_count">朋友\n</string>
    <string name="edit_profile">編輯個人資料</string>
    <string name="uploading">上傳中</string>
    <string name="profile">基本資料</string>
    <string name="email">電子郵件</string>
    <string name="name">姓名</string>
    <string name="enter_name">輸入姓名</string>
    <string name="description">個人簡介</string>
    <string name="enter_description">輸入個人簡介</string>
    <string name="join_time">加入時間</string>
    <string name="post_share">貼文分享</string>
    <string name="equipment_edit">編輯裝備清單</string>
    <string name="edit_title">名稱：</string>
    <string name="edit">編輯</string>
    <string name="edit_list">清單：</string>
    <string name="remove">刪除</string>
    <string name="cancel">取消</string>
    <string name="confirm_delete">要刪除已被勾選的項目？</string>
    <string name="title_editing">編輯中</string>
    <string name="title_please_login_first">請先登入後再使用。</string>
    <string name="setting">設定</string>
    <string name="logout">登出</string>
    <string name="title_peak_time">選擇登頂時間</string>
    <string name="next">下一步</string>
    <string name="title_activity_peak">PeakActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_sun">星期日</string>
    <string name="title_mon">星期一</string>
    <string name="title_tue">星期二</string>
    <string name="title_wed">星期三</string>
    <string name="title_thur">星期四</string>
    <string name="title_fri">星期五</string>
    <string name="title_sat">星期六</string>
    <string name="Jan">一月</string>
    <string name="title_sun_short">日</string>
    <string name="title_mon_short">一</string>
    <string name="title_tue_short">二</string>
    <string name="title_wed_short">三</string>
    <string name="title_thur_short">四</string>
    <string name="title_fri_short">五</string>
    <string name="title_sat_short">六</string>
    <string name="title_ignore">忽略</string>
    <string name="title_select_photo">選擇照片</string>
    <string name="title_press_here_to_select_photo">點選這裡選擇圖片</string>
    <string name="title_select_again">重新選擇</string>
    <string name="title_preivew">預覽</string>
    <string name="title_not_select_photo_yet">尚未選擇照片</string>
    <string name="title_mt_name">山名：</string>
    <string name="title_mt_level">等級：</string>
    <string name="title_mt_time">登頂時間：</string>
    <string name="title_description">描述些過程吧....</string>
    <string name="title_summit_info">登頂</string>
    <string name="title_level">等級 : </string>
    <string name="title_time">"時間 : "</string>
    <string name="title_desc">描述 : \n</string>
    <string name="title_setting">設定</string>
    <string name="title_delete">移除</string>
    <string name="title_edit">編輯</string>
    <string name="title_goal_edit">編輯</string>
    <string name="title_press_me">點我</string>
    <string name="title_add_photo">添加\n照片</string>
    <string name="title_remove_some_photo">請刪除照片後,再新增.</string>
    <string name="title_post_empty_info">無任何貼文唷~*</string>
    <string name="title_goal_empty_info">無任何登頂紀錄~*</string>
    <string name="title_share_info">貼文</string>
    <string name="title_descrip_something">說些甚麼吧.....</string>
    <string name="title_personal_data">個人資料</string>
    <string name="title_follow">追蹤</string>
    <string name="title_message">訊息</string>
    <string name="title_send">傳送</string>
    <string name="title_notice">通知</string>
    <string name="title_no_notification">目前無任何通知</string>
    <string name="title_message_manage">訊息管理</string>
</resources>