<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_month"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:text="@string/Jan"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_sun"
        android:text="@string/title_sun_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/calendar_week_mon"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_mon"
        android:text="@string/title_mon_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toRightOf="@id/calendar_week_sun"
        app:layout_constraintRight_toLeftOf="@id/calendar_week_tue"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_tue"
        android:text="@string/title_tue_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toRightOf="@id/calendar_week_mon"
        app:layout_constraintRight_toLeftOf="@id/calendar_week_wed"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_wed"
        android:text="@string/title_wed_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toRightOf="@id/calendar_week_tue"
        app:layout_constraintRight_toLeftOf="@id/calendar_week_thur"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_thur"
        android:text="@string/title_thur_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toRightOf="@id/calendar_week_wed"
        app:layout_constraintRight_toLeftOf="@id/calendar_week_fri"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_fri"
        android:text="@string/title_fri_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toRightOf="@id/calendar_week_thur"
        app:layout_constraintRight_toLeftOf="@id/calendar_week_sat"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/calendar_week_sat"
        android:text="@string/title_sat_short"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calendar_month"
        app:layout_constraintLeft_toRightOf="@id/calendar_week_fri"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/calendar_week_sat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>