<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="vm"
            type="com.collect.collectpeak.fragment.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_background"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragment.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_action_bar"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize">

            <ImageView
                android:id="@+id/profile_back"
                android:contentDescription="@null"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>


            <com.collect.collectpeak.custom_widget.CollectPeakTextView
                android:id="@+id/profile_action_bar_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="25sp"
                android:text="@string/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.collect.collectpeak.custom_widget.CollectPeakTextView
            android:id="@+id/profile_email"
            android:textSize="18sp"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/profile_action_bar"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_edit_email"
            app:layout_constraintTop_toBottomOf="@id/profile_email"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/profile_email"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/weather_spinner_shape"
            android:padding="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.collect.collectpeak.custom_widget.CollectPeakTextView
            android:id="@+id/profile_name"
            android:textSize="18sp"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_email"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_edit_name"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/profile_name"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"
            android:background="@drawable/weather_spinner_shape"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_name"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.collect.collectpeak.custom_widget.CollectPeakTextView
            android:id="@+id/profile_description"
            android:textSize="18sp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_name"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_edit_description"
            app:layout_constraintTop_toBottomOf="@id/profile_description"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/profile_description"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"
            android:background="@drawable/weather_spinner_shape"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_description"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.collect.collectpeak.custom_widget.CollectPeakTextView
            android:id="@+id/profile_time"
            android:textSize="18sp"
            android:text="@string/join_time"
            app:layout_constraintTop_toBottomOf="@id/profile_edit_description"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_edit_time"
            app:layout_constraintTop_toBottomOf="@id/profile_time"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/profile_time"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"
            android:background="@drawable/weather_spinner_shape"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <com.collect.collectpeak.custom_widget.CollectPeakButton
            android:id="@+id/profile_done"
            android:text="@string/done"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/custom_button_shape"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

