<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/member_photo"
        app:riv_oval="true"
        android:src="@drawable/hiking_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:layout_width="@dimen/member_user_photo_width"
        android:visibility="visible"
        android:layout_height="@dimen/member_user_photo_width"/>


    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/member_post_name"
        android:textSize="24sp"
        tools:text="Lance"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/member_photo"
        app:layout_constraintLeft_toLeftOf="@id/member_photo"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/member_post_description"
        android:textSize="18sp"
        tools:text="文青人森"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/member_post_name"
        app:layout_constraintLeft_toLeftOf="@id/member_photo"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/member_post_count"
        android:textSize="20sp"
        android:text="@string/post_count"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/member_photo"
        app:layout_constraintLeft_toRightOf="@id/member_photo"
        app:layout_constraintBottom_toBottomOf="@id/member_photo"
        app:layout_constraintRight_toLeftOf="@id/member_mountain_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/member_mountain_count"
        android:textSize="18sp"
        android:text="@string/mountain_count"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/member_photo"
        app:layout_constraintLeft_toRightOf="@id/member_post_count"
        app:layout_constraintBottom_toBottomOf="@id/member_photo"
        app:layout_constraintRight_toLeftOf="@id/member_friend_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/member_friend_count"
        android:textSize="18sp"
        android:text="@string/friend_count"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/member_photo"
        app:layout_constraintLeft_toRightOf="@id/member_mountain_count"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/member_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/member_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/member_post_description"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">



        <com.collect.collectpeak.custom_widget.CollectPeakButton
            android:id="@+id/member_follow_button"
            android:text="@string/title_follow"
            android:textSize="25sp"
            android:background="@drawable/custom_follow_button_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            app:layout_constraintRight_toLeftOf="@id/member_message_button"
            android:layout_marginBottom="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.collect.collectpeak.custom_widget.CollectPeakButton
            android:id="@+id/member_message_button"
            android:text="@string/title_message"
            android:textSize="25sp"
            android:background="@drawable/custom_message_button_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/member_follow_button"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>