<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/detail_title"
        android:text="玉山"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/detail_setting"
        android:src="@drawable/three_points"
        app:layout_constraintTop_toTopOf="@id/detail_title"
        app:layout_constraintBottom_toBottomOf="@id/detail_title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_width="20dp"
        android:layout_height="20dp"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/detail_viewpager"
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="450dp"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/detail_level"
        android:text="@string/title_level"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/detail_viewpager"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/detail_time"
        android:text="@string/title_time"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/detail_viewpager"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.collect.collectpeak.custom_widget.CollectPeakTextView
        android:id="@+id/detail_desc"
        android:text="@string/title_desc"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/detail_time"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>